made the how to play page simpler, also more mobile/tablet friendly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,12 @@
 
 /* Media queries */
 
+@media (min-width: 1200px) {
+    .how-to-play-container{
+        height: calc(100vh - 56px);
+    }
+}
+
 @media (max-width: 769px) {
     .contact-form-container{
         width: 90vw;
